logs/hamtools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/geojson'...
Listing './lib/python3.5/site-packages/geojson-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/hamtools'...
Listing './lib/python3.5/site-packages/hamtools/ctydat'...
Compiling './lib/python3.5/site-packages/hamtools/geolog.py'...
***   File "./lib/python3.5/site-packages/hamtools/geolog.py", line 79
    except qrz.NotFound, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hamtools/kml.py'...
***   File "./lib/python3.5/site-packages/hamtools/kml.py", line 41
    raise AttributeError, "%s instance has no attribute '%s'" %\
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hamtools/qrz.py'...
***   File "./lib/python3.5/site-packages/hamtools/qrz.py", line 64
    except IndexError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hamtools-0.3.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_cache'...
Listing './lib/python3.5/site-packages/requests_cache/backends'...
Listing './lib/python3.5/site-packages/requests_cache/backends/storage'...
Listing './lib/python3.5/site-packages/requests_cache-0.4.13.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
